# tiny-url

./: .gitignore  Cargo.toml  README.md
src/: db.rs  encode.rs  handlers.rs  main.rs  models.rs  server.rs  service.rs  tg.rs
static/: index.html
templates/: form.hbs  success.hbs
