[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

[dependencies]
handlebars = "6.2.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] } 
serde_json = "1.0.132"
tokio = {version = "1.41.0", features = ["full"]}
warp = "0.3.7"